BuildHughes/translation-tool/inputs/source_meta/objects/Brazil_Add_On_Upfront_Category__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Upfront Fee Records</description>
    <fields>
        <fullName>Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Description__c</fullName>
        <label>English_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Line_Items_Category_Group_c__c</fullName>
        <label>Offer Line Items Category / Group__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portugese_Name__c</fullName>
        <label>Portugese Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Brazil Add On Upfront Category</label>
</CustomObject>